# recsys-retailrocket

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dvc.yaml  mlflow.db  pyproject.toml  start.sh
.dvc/: config
.github/workflows/: ci.yml
data/processed/: interaction_matrix.npz
docs/: model_card.md
scripts/: compare_models.py  register_model.py  test_factory.py  validate_env.py
src/recsys/: __init__.py  api.py
src/recsys/config/: settings.py
src/recsys/data/: preprocessor.py
src/recsys/evaluation/: __init__.py  evaluator.py
src/recsys/features/: feature_engineer.py
src/recsys/models/: __init__.py  base.py  baseline.py  factory.py  train.py
tests/: test_models.py  test_preprocessor.py
